--- a/styles/scss/_catalog.scss
+++ b/styles/scss/_catalog.scss
@@ -1,64 +1,52 @@
 .catalog {
     padding-top: 65px;
-    padding-bottom: 46px;
+    padding-bottom: 96px;
 
     &__body {
-        & .block--nowrap {
-            @include box-flex;
-            flex-wrap: nowrap;
-        }
-
-        & > .catalog__item {
-            min-width: 736px;
-            max-width: 1140px;
-            width: 100%;
-            max-height: 180px;
-            margin-top: 30px;
-        }
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 30px;
     }
 
     &__item {
         position: relative;
-        min-width: 232px;
-        max-width: 360px;
-        // width: 100%;
-        flex-grow: 1;
+        width: 31.58%;
         cursor: pointer;
+    }
 
-        & img {
-            width: 100%;
-        }
+    & img {
+        width: 100%;
+        height: 100%;
+    }
 
-        & p {
-            position: absolute;
-            width: 100%;
-            text-align: center;
-            top: 40%;
-            bottom: 40%;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 16px;
-            line-height: 19px;
-            color: #FFFFFF;
-        }
+    & p {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 19px;
+        color: #FFFFFF;
+    }
 
-        & span {
-            font-size: text-big(16px);
-            line-height: 29px;
-            font-weight: bold;
-        }
+    & span {
+        font-size: 24px;
+        line-height: 29px;
+        font-weight: bold;
     }
 
     &__item::before {
         display: block;
         content: " ";
-
         position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-
+        top: 0; bottom: 0; left: 0; right: 0;
         background-color: rgba(33, 22, 22, 0.7);
         transition: .8s;
     }
