--- a/styles/scss/_feedback.scss
+++ b/styles/scss/_feedback.scss
@@ -3,19 +3,26 @@
     background-image: url('../images/bg-feedback.jpg');
     background-size: cover;
     min-height: 448px;
+    padding: 97px 0 156px;
+    z-index: 1;
+
+    &::after {
+        position: absolute;
+        content: " ";
+        top: 0; right: 0; bottom: 0; left: 0;
+        background-color: rgba(244, 244, 244, .7);
+        z-index: -1;
+    }
 
     &__body {
-        background-color: rgba(244, 244, 244, 0.7);
-        min-height: 448px;
-        height: 100%;
-
-        & > .container {
-            @include box-flex;
-        }
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 30px;
+        flex-wrap: wrap;
     }
 
     &__left {
-        margin-top: 97px;
         text-align: center;
         font-size: 20px;
 
@@ -30,35 +37,33 @@
     }
 
     &__right {
-        width: 557px;
+        width: 360px;
         text-align: center;
-        margin-top: 150px;
+        margin-right: 95px;
 
         & h2 {
             line-height: 167.2%;
             color: #222423;
         }
 
-        & h3 {
-            
+        & h3 { 
             font-weight: normal;
             font-size: 18px;
             line-height: 167.2%;
             color: #222224;
         }
+    }
 
-        & .submit {
-            display: block;
-            width: 356px;
-            background-color: #E1E1E1;
-            border-radius: 22px;
-            margin: 32px auto 0;
-            overflow: hidden;
-            font-size: 14px;
-        }
+    &__btn {
+        display: flex;
+        width: 356px;
+        border-radius: 22px;
+        margin: 32px auto 0;
+        font-size: 14px;
+        overflow: hidden;
+
         & input,
         & button {
-            float: left;
             padding: 20px 22px;
             border: none;
             outline: none;
@@ -67,19 +72,20 @@
 
         & input {
             width: 256px;
+            background-color: #E1E1E1;
         }
 
         & input::-webkit-input-placeholder, 
         & input:-moz-placeholder {
             opacity: 0.67;
         }
-
+        
         & button {
             width: 100px;
             color: #FFFFFF;
             cursor: pointer;
             transition: .2s;
-
+    
             &:hover {
                 background-color: #E05C6E;
             }
