--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -2,7 +2,8 @@
     background-color: #222224;
 
     &__body {
-        @include box-flex;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
         padding: 22px 0;
 
@@ -16,11 +17,11 @@
         & svg {
             fill: white;
             transition: .2s;
+        }
 
-            & .svg-icon {
-                fill: black;
-                transition: .2s;
-            }
+        & .svg-icon {
+            fill: black;
+            transition: .2s;
         }
 
         & a {
