--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -1,27 +1,34 @@
 .header {
+    position: relative;
     background-color: #222;
+    padding: 18px 0;
 
     & svg {
         fill: #E8E8E8;
 
         &:hover {
-            fill: #F16D7F; 
+            fill: $color_pink-red; 
         }
     }
-    &__body {
-        @include box-flex;
-        align-items: center;
-    }
 
-    &__left {
-        margin: 18px 0;
+    &__body {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     &__left svg {
         margin-left: 40px;
     }
 
-    &__right *+* {
-        margin-left: 33px;
+    &__right {
+        overflow: hidden;
+
+        & * + *{
+            margin-left: 33px;
+        }
     }
 }
+
+
+
