--- a/styles/scss/_hiro.scss
+++ b/styles/scss/_hiro.scss
@@ -5,29 +5,29 @@
     padding: 0;
 
     &__body {
-        @include box-flex;
+        display: flex;
+        justify-content: space-between;
     }
 
     &__img {
         min-width: 386px;
         display: flex;
         justify-content: center;
-        padding: 0 90px 0 110px;
         margin-right: 40px;
+    }
 
-        & img {
-            min-width: 180px;
-            max-width: 100%;
-        }
+    & img {
+        min-width: 180px;
+        max-width: 100%;
     }
 
     &__heading {
         margin-top: 290px;
         margin-right: 100px;
+    }
 
-        & h1 {
-            border-left: 12px solid $domin-color;
-        }
+    & h1 {
+        border-left: 12px solid $color_pink-red;
     }
 }
 
