--- a/styles/scss/_services.scss
+++ b/styles/scss/_services.scss
@@ -4,7 +4,8 @@
     padding: 104px 0;
 
     &__body {
-        @include box-flex;
+        display: flex;
+        justify-content: space-between;
         flex-wrap: wrap;
     }
 
